AML v0.3, 2015-07-10 ----------------------- - Now Configuration properties are stored in map (id, object). - Monitorable properties are stored in map (id, object). - Guarantee terms are stored in map (id, object). - Creation constraints are stored in map (id, object). - Fixed AreCompliant operation. - Added test packs.